--- a/jogo7.css
+++ b/jogo7.css
@@ -90,7 +90,7 @@ body.dark {
       }
       
       a{
-          text-decoration: none;
+          /* text-decoration: none; */
           color: #333;
       }
   
