--- a/jogo6.css
+++ b/jogo6.css
@@ -101,7 +101,7 @@ body.dark {
         /* background: #eee;
         border-radius: 5px; */
       }
-      img{
+      iframe{
         max-width: 700px;
         border-radius: 5px;
       }
@@ -114,7 +114,7 @@ body.dark {
       }
   
       @media (max-width: 768px) {
-        img{
+        iframe{
           max-width: 300px;
         }
       }
