--- a/jogo2.css
+++ b/jogo2.css
@@ -30,7 +30,8 @@ body.dark a {
 
 .btt{
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+
 }
 /* --------------------------------------------------    */
     
