--- a/jogo4.css
+++ b/jogo4.css
@@ -30,7 +30,7 @@ body.dark a {
 
 .btt{
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 /* --------------------------------------------------    */
     
